force-app/main/default/objects/Entitlement_Links__c/Entitlement_Links__c.object-meta.xml
<CustomObject>
    <description>SOX object - Junction Object holding old and new entitlements.</description>
    <label>Entitlement Links</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Entitlement Links Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>