force-app/main/default/objects/Entitlement_Links__c/fields/Previous_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Previous_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the source entitlement that was renewed, replaced (converted or upgraded), or refreshed to create the linked renewed entitlement. Used to track entitlement lineage through business transaction cycles</description>
    <inlineHelpText>The original entitlement that was renewed, replaced (converted or upgraded), or refreshed. This field establishes the relationship between the an entitlement and its successor</inlineHelpText>
    <label>Previous Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>New Entitlements</relationshipLabel>
    <relationshipName>Entitlement_Links</relationshipName>
    <type>Lookup</type>
</CustomField>