force-app/main/default/objects/Entitlement_Links__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>ARY-838- Update the Quantity which is Renewed w.r.t Old Entitlement</description>
    <inlineHelpText>Quantity being renewed</inlineHelpText>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>