force-app/main/default/objects/Entitlement_Links__c/fields/Renewed_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Entitlement__c</fullName>
    <description>References the successor entitlement that was created through renewal, replacement (conversion or upgrade) or refresh of an entitlement. Used to track forward progression of entitlements through their lifecycle.</description>
    <inlineHelpText>The new entitlement that resulted from renewal, replacement (conversion or upgrade) or refresh of an entitlement. This field establishes the relationship between an entitlement and its successor.</inlineHelpText>
    <label>New Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Previous Entitlements</relationshipLabel>
    <relationshipName>Entitlement_Links1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>