force-app/main/default/objects/Entitlement_Links__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Determines the validity of the linked Asset for financial reporting, specifically for accurate ARR calculations and other related reports.</description>
    <inlineHelpText>Determines the validity of the linked Asset for financial reporting, specifically for accurate ARR calculations and other related reports.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>