force-app/main/default/objects/Entitlement_Links__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>ARY-838 + Used in Scale Utility to link entitlement from the same contract</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <default>true</default>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Non-Renewable</fullName>
            </value>
            <value>
                <fullName>GC Offer</fullName>
            </value>
            <value>
                <fullName>GC Renewal</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>CNV-ONPREM</fullName>
            </value>
            <value>
                <fullName>RSC to RSC-G Conv</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Go - RSCP</fullName>
            </value>
            <value>
                <fullName>Go - RSCG</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Partial CNV-ONPREM</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Split-Upgrade</fullName>
            </value>
            <value>
                <fullName>Split-Conversion</fullName>
            </value>
            <value>
                <fullName>Split-Surviving</fullName>
            </value>
            <value>
                <fullName>Split-Renewal</fullName>
            </value>
            <value>
                <fullName>RSCP to RSC</fullName>
            </value>
            <value>
                <fullName>$0 Product Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>