force-app/main/default/objects/Entitlement_Links__c/validationRules/Entitlement_Links_Access_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Entitlement_Links_Access_Restriction</fullName>
    <active>true</active>
    <description>Order Fulfilment related records are not to edit</description>
    <errorConditionFormula>AND(
NOT($Setup.ShGl_DisableBusinessLogic__c.Disable_Entitlement_Validation_Rules__c),
NOT(ISNEW()),
$User.Alias &lt;&gt; &apos;autoproc&apos;,
NOT(INCLUDES($User.RBAC_Group__c, &apos;API&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT System Admin&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT Prod Ops Support&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;System - IT&apos;))
)</errorConditionFormula>
    <errorMessage>You aren’t authorized to edit entitlement links, hence please create a support ticket with ProdOps Support or email ProdOpsapps@rubrik.com” with details</errorMessage>
</ValidationRule>