force-app/main/default/objects/Entitlement_Links__c/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>NAME</columns>
    <columns>Previous_Entitlement__c</columns>
    <columns>Renewed_Entitlement__c</columns>
    <columns>External_Key__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
</ListView>